fix compilation error, jdk-21 function